 * /'s can now be included in the subject of a @mail 
   message via doubling it up -- @mail foo=a//s//l/What's up? 
   Suggested by paige.
 * locate() now ignores spaces in its 3rd argument. [MG]
 * Change the default mud_name in mush.cnf from TinyMUSH
   to PennMUSH. Suggested by many people over the years.

Functions
 * llocks() without any arguments returns a list of the
   standard locks.

Fixes:
 * English matching works better with possessive get
   (get box's 2nd thing). Reported by israphel.
 * Many more messages generated by the server have been 
   marked as translatable. By Stoko.

Version 1.8.3 patchlevel 11                     Jan 01, 2010

Major changes:
  * The WHO, DOING and SESSION commands are now normal game commands,
    and can be @hook'd, typed in lower-case, etc. (The WHO at the login
    screen is separate.) If you have a softcoded 'who' command, you will
    need to @hook/override WHO for it to continue working. Suggested by
    Bane. [MG]
  * The "take" command has been moved from the hardcode into alias.cnf.
    If you want to keep it as an alias for "get", you should add the line
    "command_alias get take" into your alias.cnf. [MG]

Configuration:
  * The *_file options (connect_file, motd_file, etc) can now be a
    #dbref/attribute instead of a filename, in which case the given
    attribute is evaluated and the result shown in place of the text file.
    Based on patches by Nathan Baum and Mercutio@M*U*S*H. [MG]

Commands:
  * @decompile now takes multiple attribute patterns after the /
    (@dec obj/attr attr2) [GM]
  * @channel/decompile now shows the dbref of the channel mogrifier,
    instead of its name. [SW]
  * @pemit now takes a /port switch, which sends the message to the
    specified port. Suggested by Mercutio. [MG]
  * @hook/list without a <command> now shows all commands which have hooks.
    Based on a patch by Trinsec. [MG]
  * @search now takes multiple <class>=<restriction> pairs. [MG]