@@ -31,6 +31,7 @@ Minor Changes:
 Functions
  * llocks() without any arguments returns a list of the
    standard locks.
+ * unsetq(), to erase queue registers. [GM]
 
 Fixes:
  * English matching works better with possessive get
